--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "concurrently \"vite dev\" typesafe-i18n",
+		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
@@ -14,42 +14,43 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.31.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.8.3",
-		"@typescript-eslint/eslint-plugin": "^5.53.0",
-		"@typescript-eslint/parser": "^5.53.0",
-		"autoprefixer": "^10.4.13",
-		"concurrently": "^7.6.0",
-		"eslint": "^8.34.0",
-		"eslint-config-prettier": "^8.6.0",
+		"@iconify/json": "^2.2.88",
+		"@inlang/sdk-js": "^0.7.0",
+		"@playwright/test": "^1.35.1",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^1.22.1",
+		"@typescript-eslint/eslint-plugin": "^5.61.0",
+		"@typescript-eslint/parser": "^5.61.0",
+		"autoprefixer": "^10.4.14",
+		"concurrently": "^8.2.0",
+		"eslint": "^8.44.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.4",
-		"prettier-plugin-svelte": "^2.9.0",
-		"prettier-plugin-tailwindcss": "^0.2.3",
-		"prisma": "4.10.1",
-		"svelte": "^3.55.1",
-		"svelte-check": "^3.0.3",
-		"svelte-preprocess": "^4.10.7",
-		"svelte-seo": "^1.5.2",
-		"tailwindcss": "^3.2.7",
-		"tslib": "^2.5.0",
-		"typesafe-i18n": "^5.24.1",
-		"typescript": "^4.9.5",
-		"vite": "^4.1.4",
-		"vitest": "^0.25.8"
+		"postcss": "^8.4.25",
+		"prettier": "^3.0.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"prisma": "4.16.2",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.5",
+		"svelte-preprocess": "^5.0.4",
+		"svelte-seo": "^1.5.3",
+		"tailwindcss": "^3.3.2",
+		"tslib": "^2.6.0",
+		"typescript": "^5.1.6",
+		"unplugin-icons": "^0.16.3",
+		"vite": "^4.4.2",
+		"vitest": "^0.33.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^4.10.1",
-		"@tabler/icons-svelte": "^2.4.0",
-		"@tanstack/svelte-query": "^4.24.10",
-		"@trpc/client": "^10.12.0",
-		"@trpc/server": "^10.12.0",
-		"svelte-transition": "^0.0.7",
-		"trpc-svelte-query-adapter": "^2.0.0",
-		"trpc-sveltekit": "^3.4.2",
-		"zod": "^3.20.6"
+		"@prisma/client": "^4.16.2",
+		"@tanstack/svelte-query": "^4.29.19",
+		"@trpc/client": "^10.34.0",
+		"@trpc/server": "^10.34.0",
+		"svelte-transition": "^0.0.10",
+		"trpc-svelte-query-adapter": "^2.1.0",
+		"trpc-sveltekit": "^3.5.16",
+		"zod": "^3.21.4"
 	}
 }
